@@ -42,3 +42,6 @@
 	* fixed eeze_udev_find_unlisted_similar to be less permissive
 	* added EEZE_EVENT_DISK_EJECT and eeze_disk_eject, functions for ejecting a disk
 
+2011-06-29  Mike Blumenkrantz (discomfitor/zmike)
+        * fixed bug where EEZE_UDEV_EVENT_NONE would not match all events for watches
+        * fixed segv when detecting removable drives
